--- a/CNN_MNIST_Benchmark.ipynb
+++ b/CNN_MNIST_Benchmark.ipynb
@@ -1468,6 +1468,7 @@
     "plt.xlabel('CPU Core Clocks')\n",
     "plt.ylabel('Performance - Lower is better')\n",
     "plt.title('CPU Benchmarks')\n",
+    "plt.grid()\n",
     "plt.savefig('CPU Benchmarks')\n",
     "plt.show()"
    ]
@@ -1496,6 +1497,7 @@
     "plt.xlabel('GPU Core Clocks')\n",
     "plt.ylabel('Performance - Lower is better')\n",
     "plt.title('GPU Core Benchmarks')\n",
+    "plt.grid()\n",
     "plt.savefig('GPU Core Benchmarks.png')\n",
     "plt.show()"
    ]
@@ -1524,6 +1526,7 @@
     "plt.xlabel('GPU Memory Clocks')\n",
     "plt.ylabel('Performance - Lower is better')\n",
     "plt.title('GPU Memory Benchmarks')\n",
+    "plt.grid()\n",
     "plt.savefig('GPU Memory Benchmarks.png')\n",
     "plt.show()"
    ]
